objects/Interviewing__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Interviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Interviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Round 1 Scheduled</fullName>
                </value>
                <value>
                    <fullName>Round 1 Finished</fullName>
                </value>
                <value>
                    <fullName>Cleared Round 1</fullName>
                </value>
                <value>
                    <fullName>Offer Released</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interviewing</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviewing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>